--- a/env.example
+++ b/env.example
@@ -4,6 +4,9 @@
 MONGODB_URI=mongodb://username:password@host.docker.internal:27017/?authSource=admin&directConnection=true
 
 # LLM Configuration
+# When running pensive in Docker and the model runner is on the host, use host.docker.internal:
+#   LLM_URI=http://host.docker.internal:12434/engines/llama.cpp/v1
+#   LLM_EMBEDDING_URI=http://host.docker.internal:12434/engines/llama.cpp/v1
 LLM_URI=http://10.28.28.15:8080
 LLM_EMBEDDING_URI=http://10.28.28.15:1234/v1
 LLM_MODEL=Qwen/Qwen3-Coder-Next-GGUF:Q4_K_M
